configuration/ingress/ingress-jellyfin.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jellyfin-via-cf-tunnel
  namespace: jellyfin
  # annotations:
  #   route.openshift.io/termination: edge
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: jellyfin.hknlab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
