configuration/ingress/ingress-jellyseerr.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jellyseerr-via-cf-tunnel
  namespace: jellyseerr
  # annotations:
  #   route.openshift.io/termination: edge
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: jellyseerr.hknlab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  name: web
