configuration/ingress/ingress-mastodon.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mastodon-via-cf-tunnel
  namespace: mastodon
  # annotations:
  #   route.openshift.io/termination: edge
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: mastodon.hknlab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webui
                port:
                  name: http
